# medservice_parsers

./: README.md  _debug.txt  _debug2.txt  _debug3.txt  _log3.txt  _log3_full.txt  _log4.txt  _log5.txt  _log6.txt  _log_readable.txt  debug_page.html  docker-compose.yml  parser_log.txt  parser_log2.txt  parser_log3.txt  parser_log4.txt  parser_log5.txt  parser_log6.txt  pyproject.toml  result.json  reviews.json  test_list.txt
google_reviews/: __init__.py  cli.py  config.py  database.py  parser.py
napopravku_reviews/: __init__.py  cli.py  config.py  database.py  models.py  parser.py
prodoctorov_reviews/: __init__.py  cli.py  config.py  database.py  models.py  parser.py
twogis_reviews/: __init__.py  cli.py  config.py  database.py  models.py  parser.py
yandex_reviews/: __init__.py  cli.py  config.py  models.py  parser.py
