[tool.poetry]
name = "reviews-parsers"
version = "1.0.0"
description = "Парсеры отзывов с Яндекс Карт, Google Maps, 2GIS, ПроДокторов и НаПоправку"
authors = ["hertzxq"]
readme = "README.md"
packages = [{include = "yandex_reviews"}, {include = "google_reviews"}, {include = "prodoctorov_reviews"}, {include = "twogis_reviews"}, {include = "napopravku_reviews"}]

[tool.poetry.dependencies]
python = "^3.11"
playwright = "^1.49"
beautifulsoup4 = "^4.12"
lxml = "^5.3"
pydantic = "^2.10"
asyncpg = "^0.30"
httpx = "^0.28"  # прямой публичный reviews-API 2GIS (twogis_reviews/_fetch_via_api)

[tool.poetry.scripts]
yandex-reviews = "yandex_reviews.cli:main"
google-reviews = "google_reviews.cli:main"
prodoctorov-reviews = "prodoctorov_reviews.cli:main"
twogis-reviews = "twogis_reviews.cli:main"
napopravku-reviews = "napopravku_reviews.cli:main"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
